--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -52,7 +52,7 @@ $( document ).ready( function() {
 </script>
 </head>
 <body>
-HTML5 + REST Hello World - FIAP<br>
+HTML5 + REST Hello World<br>
 <form name="theForm">
     <fieldset>
         <label for="name" id="name_label">Name</label>
